<resources>
    <string name="app_name">PoliCarrito</string>

    <string name="activity_login_01">B I E N V E N I D O</string>
    <string name="activity_login_02">Inicia Sesión</string>
    <string name="activity_login_03">Entrar</string>
    <string name="activity_login_04">¿Eres nuevo? Regístrate !</string>

    <string name="activity_signup_01">Poli Carrito</string>
    <string name="activity_signup_02">Regístrate para continuar</string>
    <string name="activity_signup_03">R e g í s t r a r s e</string>
    <string name="activity_signup_04">¿Ya tienes una cuenta? Inicia Sesión !</string>
    <string name="activity_signup_05">Ingrese sus datos</string>

    <string name="fra_cuenta_Titulo">Datos de la Cuenta</string>
    <string name="fra_cuenta_TituloDatos">Información</string>
    <string name="fra_cuenta_Logout">Cerrar Sesión</string>
    <string name="fra_cuenta_Correo">Correo Electrónico</string>

    <string name="title_active_login">Firebase Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="tv_take_photo">Tomar foto</string>
    <string name="tv_description">Selecciona una imagen</string>
    <string name="tv_placeholder">Demostración de detección de objetos</string>
    <string name="title_activity_wa">WA</string>

</resources>